find_package(PAPI)
option(USE_PAPI "Use PAPI to collect hardware counters" ${PAPI_FOUND})
configure_file(bench_config.h.in bench_config.h @ONLY)

function(add_ibv_benchmark EXEC)
    add_ibv_executable(${EXEC} ${ARGN})
    if(USE_PAPI)
        target_link_libraries(${EXEC} PRIVATE Papi::papi)
    endif()
endfunction()

include_directories(${CMAKE_CURRENT_BINARY_DIR})
link_libraries(mlog-lib pmi_shared)
add_ibv_benchmark(ibv_pingpong_sendrecv ibv_pingpong_sendrecv.cpp)
add_ibv_benchmark(ibv_pingpong_write ibv_pingpong_write.cpp)
add_ibv_benchmark(ibv_pingpong_write_imm ibv_pingpong_write_imm.cpp)
add_ibv_benchmark(ibv_pingpong_read ibv_pingpong_read.cpp)
find_package(MPI)
if(MPI_FOUND)
    add_executable(mpi_pingpong mpi_pingpong.cpp)
    target_include_directories(mpi_pingpong PRIVATE ${MPI_CXX_INCLUDE_PATH})
    target_compile_options(mpi_pingpong PRIVATE ${MPI_CXX_COMPILE_FLAGS})
    target_link_libraries(mpi_pingpong PRIVATE ${MPI_CXX_LIBRARIES} ${MPI_CXX_LINK_FLAGS})
    if(USE_PAPI)
        target_link_libraries(mpi_pingpong PRIVATE Papi::papi)
    endif()
endif()

add_subdirectory(rendezvous)